<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginTop="10dp"
    android:background="@color/white"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <TextView
        android:id="@+id/myreservation"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/menu_item_back"
        android:text="@string/myreservation"
        android:textSize="18dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_arraw"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/ic_arraw" />

    <TextView
        android:id="@+id/login"
        app:layout_constraintTop_toBottomOf="@+id/myreservation"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/menu_item_back"
        android:text="@string/login"
        android:textSize="18dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_arraw"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/ic_arraw" />

    <TextView
        android:id="@+id/logout"
        app:layout_constraintTop_toBottomOf="@+id/login"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/menu_item_back"
        android:text="@string/loout"
        android:textSize="18dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_arraw"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/ic_arraw" />



    <TextView
        android:id="@+id/aboutapp"
        app:layout_constraintTop_toBottomOf="@+id/logout"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/menu_item_back"
        android:text="@string/aboutapp"
        android:textSize="18dp"
        android:padding="12dp"
        android:drawableEnd="@drawable/ic_arraw"
        android:gravity="center_vertical"
        android:textColor="@color/black"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:drawableRight="@drawable/ic_arraw" />


</android.support.constraint.ConstraintLayout>